--- a/loocho/zomana/1/template0.html
+++ b/loocho/zomana/1/template0.html
@@ -1,9 +1,3 @@
 <h1>
-	Zo and Mana
-	From local with modif *******
-	test final with esperenc
-	Other change
-	Test with Vincent
-	27 / 07 / 2016
-	14:29
+	recommence 14:49
 </h1>
