--- a/loocho/mywebsite/1/template0.html
+++ b/loocho/mywebsite/1/template0.html
@@ -1,4 +1,5 @@
 <h1>
 	MY WEBSITE FIRST VERSION
 	Exemple modification from github to loocho
+	This is the modification for testing staging environment
 </h1>
